--- a/YazGelProje/Views/Admin/Authority.cshtml
+++ b/YazGelProje/Views/Admin/Authority.cshtml
@@ -38,7 +38,7 @@
                             <td style="font-weight: bold"> @item.Commission.Title </td>
                         }
 
-                        <td><a href="@Url.Action("SetAuthority", "Admin", new { id = @item.TeacherId })" class="btn px-15 btn-primary">Yetki Belirle</a></td>
+                        <td><a href="@Url.Action("SetAuthority", "Admin", new { id = @item.TeacherId })" class="btn px-15 btn-success">Yetki Belirle</a></td>
                     </tr>
                 }
 
