--- a/YazGelProje/Views/Admin/SetAuthority.cshtml
+++ b/YazGelProje/Views/Admin/SetAuthority.cshtml
@@ -9,7 +9,7 @@
 
     <h3 style="font-weight: bold; font-style: italic ;text-align:center ;color:green">@ViewBag.Mesaj1</h3>
 
-    <div style="border: 2px solid #000; padding: 8px; -moz-border-radius: 10px; -webkit-border-radius: 10px; border-radius: 10px; width:100%; margin-left:0px">
+    <div style="border: 2px solid #20C997; padding: 8px; -moz-border-radius: 10px; -webkit-border-radius: 10px; border-radius: 10px; width:100%; margin-left:0px">
 
         @if (Model != null)
         {
