--- a/YazGelProje/Views/Admin/TeacherList.cshtml
+++ b/YazGelProje/Views/Admin/TeacherList.cshtml
@@ -2,7 +2,7 @@
     Layout = "~/Views/Shared/AdminSideBar.cshtml";
 }
 @model IEnumerable<YazGelProje.Models.Teacher>
-<a href="@Url.Action("TeacherAdd","Admin")" class="btn px-15 btn-primary">
+<a href="@Url.Action("TeacherAdd","Admin")" class="btn px-15 btn-success">
     <i class="las la-plus fs-16"></i>Yeni Öğretmen Ekle
 </a>
 
