--- a/YazGelProje/Views/Login/Alert.cshtml
+++ b/YazGelProje/Views/Login/Alert.cshtml
@@ -66,7 +66,7 @@
                             <div class="error-page__title"></div>
                             <h3 class="fw-500">Staj Dönemi Kapalı Olduğu İçin Giriş Yapamazsınız.</h3>
                             <div class="content-center mt-30">
-                                <a href="/Home/Index" class="btn btn-primary btn-default btn-squared px-30">Girişe Dön</a>
+                                <a href="/Home/Index" class="btn btn-success btn-default btn-squared px-30">Girişe Dön</a>
                             </div>
                         </div>
                     </div>
