--- a/YazGelProje/Views/Shared/SuperAdminSideBar.cshtml
+++ b/YazGelProje/Views/Shared/SuperAdminSideBar.cshtml
@@ -98,32 +98,19 @@
                     <li class="nav-author">
                         <div class="dropdown-custom">
                             <a href="javascript:;" class="nav-item-toggle">
-                                <img src="~/img/author-nav.jpg" alt=""
+                                <img src="~/Content/Resimler/png-clipart-computer-icons-system-administrator-id-computer-network-heroes.png" alt=""
                                      class="rounded-circle">
                             </a>
                             <div class="dropdown-wrapper">
                                 <div class="nav-author__info">
                                     <div class="author-img">
-                                        <img src="~/img/author-nav.jpg" alt="" class="rounded-circle">
+                                        <img src="~/Content/Resimler/png-clipart-computer-icons-system-administrator-id-computer-network-heroes.png" alt="" class="rounded-circle">
                                     </div>
                                     <div>
-                                        <h6></h6>
-                                        <span>Unvan</span>
+                                        <h6>SUPER ADMIN</h6>
                                     </div>
                                 </div>
                                 <div class="nav-author__options">
-                                    <ul>
-                                        <li>
-                                            <a href="#">
-                                                <span data-feather="user"></span> Profil
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="">
-                                                <span data-feather="settings"></span> Ayarlar
-                                            </a>
-                                        </li>
-                                    </ul>
                                     <a href="@Url.Action("SuperAdminLogOut","Login")" class="nav-author__signout">
                                         <span data-feather="log-out"></span> Çıkış Yap
                                     </a>
