--- a/YazGelProje/Views/SuperAdmin/AdminList.cshtml
+++ b/YazGelProje/Views/SuperAdmin/AdminList.cshtml
@@ -3,7 +3,7 @@
     Layout = "~/Views/Shared/SuperAdminSideBar.cshtml";
 }
 
-<a href="@Url.Action("AdminAdd","SuperAdmin")" class="btn px-15 btn-primary">
+<a href="@Url.Action("AdminAdd","SuperAdmin")" class="btn px-15 btn-success">
     <i class="las la-plus fs-16"></i>Yeni Admin Ekle
 </a>
 <div class="userDatatable adv-table-table global-shadow border-0 bg-white w-100 faculty-table">
