--- a/YazGelProje/Views/SuperAdmin/InternFileEdit.cshtml
+++ b/YazGelProje/Views/SuperAdmin/InternFileEdit.cshtml
@@ -22,7 +22,7 @@
                             </div>
                         </div>
                         <div class="layout-button mt-25">
-                            <input type="submit" value="Güncelle" class="btn btn-primary btn-default btn-squared px-30" style="width:100%"/>
+                            <input type="submit" value="Güncelle" class="btn btn-success btn-default btn-squared px-30" style="width:100%"/>
                         </div>
                     </form>
                 </div>
