--- a/YazGelProje/Views/SuperAdmin/TeacherAdd.cshtml
+++ b/YazGelProje/Views/SuperAdmin/TeacherAdd.cshtml
@@ -24,6 +24,9 @@
             <div class="card-body py-md-30">
                 <div class="horizontal-form">
                     <form action="#">
+                        <div style="background-color:darkred; text-align:center; align-items:center;">
+                            <h3 style="color: white;">@ViewBag.Message</h3>
+                        </div>
                         <div class="form-group row mb-25">
                             <div class="col-sm-3 d-flex aling-items-center">
                                 <label for="inputNameIcon" class=" col-form-label color-dark fs-14 fw-500 align-center">Adı</label>
@@ -56,8 +59,9 @@
                             </div>
                             <div class="col-sm-9">
                                 <div class="with-icon">
-                                    @Html.EditorFor(model => model.SicilNo, new { htmlAttributes = new { @class = "form-control  ih-medium ip-gray radius-xs b-light", id = "sicilno", placeholder = "Sicil No" } })
-                                    @Html.ValidationMessageFor(model => model.SicilNo, "", new { @class = "text-danger" })
+                                    <input class="form-control  ih-medium ip-gray radius-xs b-light" , name="SicilNo" , id="sicilno" , placeholder="Sicil No" />
+                                    @*@Html.EditorFor(model => model.SicilNo, new { htmlAttributes = new { @class = "form-control  ih-medium ip-gray radius-xs b-light", id = "sicilno", placeholder = "Sicil No" } })
+                    @Html.ValidationMessageFor(model => model.SicilNo, "", new { @class = "text-danger" })*@
                                 </div>
                             </div>
                         </div>
@@ -70,8 +74,9 @@
                             </div>
                             <div class="col-sm-9">
                                 <div class="with-icon">
-                                    @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control  ih-medium ip-gray radius-xs b-light", id = "inputEmailIcon", placeholder = "example@kou.edu.tr" } })
-                                    @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
+                                    <input class="form-control  ih-medium ip-gray radius-xs b-light" , name="Email" , id="Email" , placeholder="example@kou.edu.tr" />
+                                    @*@Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control  ih-medium ip-gray radius-xs b-light", id = "inputEmailIcon", placeholder = "example@kou.edu.tr" } })
+                    @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })*@
                                 </div>
                             </div>
                         </div>
@@ -95,7 +100,7 @@
                             </div>
                         </div>
                         <div class="layout-button mt-25">
-                            <input type="submit" value="Ekle" class="btn btn-primary btn-default btn-squared px-30" style="width:100%;" />
+                            <input type="submit" value="Ekle" class="btn btn-success btn-default btn-squared px-30" style="width:100%;" />
                         </div>
                     </form>
                 </div>
