--- a/YazGelProje/Views/SuperAdmin/TeacherList.cshtml
+++ b/YazGelProje/Views/SuperAdmin/TeacherList.cshtml
@@ -3,7 +3,7 @@
     Layout = "~/Views/Shared/SuperAdminSideBar.cshtml";
 }
 
-<a href="@Url.Action("TeacherAdd","SuperAdmin")" class="btn px-15 btn-primary">
+<a href="@Url.Action("TeacherAdd","SuperAdmin")" class="btn px-15 btn-success">
     <i class="las la-plus fs-16"></i>Yeni Öğretmen Ekle
 </a>
 
