--- a/YazGelProje/Views/Teacher/InternBookFiles.cshtml
+++ b/YazGelProje/Views/Teacher/InternBookFiles.cshtml
@@ -46,7 +46,7 @@
 
                     tableResult += "<tr>";
                     tableResult += "<td style = ''><a href='/InternFiles/Staj/" + result[i].PageName + "' InternBookFileShow>" + result[i].PageName + "</a></td>";
-                    tableResult += "<td style = ''><a href='/InternFiles/Staj/" + result[i].PageName + "' Download><button type='button' class='btn btn-info'>İndir</button></a></td>";
+                    tableResult += "<td style = ''><a href='/InternFiles/Staj/" + result[i].PageName + "' Download><button type='button' class='btn btn-success'>İndir</button></a></td>";
                     tableResult += "<td style = ''>" + ToJavaScriptDate(result[i].Date) + "</td>";
 
                     tableResult += "</tr>";
@@ -136,7 +136,7 @@
                                         }
                                     </select>
                                     <hr />
-                                    <button id="delete" type='submit' class="btn px-15 btn-primary" style="width:100%">Onayla</button>
+                                    <button id="delete" type='submit' class="btn px-15 btn-success" style="width:100%">Onayla</button>
                                 </div>
                             </div>
                         </div>
