--- a/YazGelProje/Views/Admin/StudentAdd.cshtml
+++ b/YazGelProje/Views/Admin/StudentAdd.cshtml
@@ -17,14 +17,15 @@
 
             $('#email').mask("999999999@kocaeli.edu.tr");
 
-            $('#tcno').mask("99999999999");
+            $('#tcNO').mask("99999999999");
         });
     </script>
 
 </head>
 
 
-<form method="post" action="/Admin/StudentAdd">
+@using (Html.BeginForm("StudentAdd", "Admin", FormMethod.Post))
+{
     <div class="col-lg-12">
         <div class="card card-horizontal card-default card-md mb-4">
             <div class="card-header">
@@ -33,14 +34,17 @@
             <div class="card-body py-md-30">
                 <div class="horizontal-form">
                     <form action="#">
+                        <div style="background-color:darkred; text-align:center; align-items:center;">
+                            <h3 style="color: white;">@ViewBag.Message</h3>
+                        </div>
                         <div class="form-group row mb-25">
                             <div class="col-sm-3 d-flex aling-items-center">
                                 <label for="inputNameIcon" class=" col-form-label color-dark fs-14 fw-500 align-center">Tc</label>
                             </div>
                             <div class="col-sm-9">
                                 <div class="with-icon">
-                                    @Html.EditorFor(model => model.Tc, new { htmlAttributes = new { @class = "form-control  ih-medium ip-gray radius-xs b-light", id = "tcno", placeholder = "Tc No" } })
-                                    @Html.ValidationMessageFor(model => model.Tc, "", new { @class = "text-danger" })
+                                    <input class="form-control  ih-medium ip-gray radius-xs b-light"  name = "Tc", id= "tcNO", placeholder = "Tc No" />
+                                    @*@Html.EditorFor(model => model.Tc, new { htmlAttributes = new { @class = "form-control  ih-medium ip-gray radius-xs b-light", name = "aranan", id= "tcNO", placeholder = "Tc No" } })*@
                                 </div>
                             </div>
                         </div>
@@ -52,8 +56,9 @@
                             </div>
                             <div class="col-sm-9">
                                 <div class="with-icon">
-                                    @Html.EditorFor(model => model.StudentNumber, new { htmlAttributes = new { @class = "form-control  ih-medium ip-gray radius-xs b-light", id = "studentNumber", placeholder = "Öğrenci No" } })
-                                    @Html.ValidationMessageFor(model => model.StudentNumber, "", new { @class = "text-danger" })
+                                    <input class="form-control  ih-medium ip-gray radius-xs b-light" name="StudentNumber" , id="studentNumber" , placeholder="Öğrenci No" />
+                                    @*@Html.EditorFor(model => model.StudentNumber, new { htmlAttributes = new { @class = "form-control  ih-medium ip-gray radius-xs b-light", id = "studentNumber", placeholder = "Öğrenci No" } })
+                                    @Html.ValidationMessageFor(model => model.StudentNumber, "", new { @style = "color:red; text-size:8;" })*@
                                 </div>
                             </div>
                         </div>
@@ -66,7 +71,7 @@
                             <div class="col-sm-9">
                                 <div class="with-icon">
                                     @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control  ih-medium ip-gray radius-xs b-light", id = "inputEmailIcon", placeholder = "Adı" } })
-                                    @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
+                                    @Html.ValidationMessageFor(model => model.Name, "", new { @style = "color:red; text-size:8;" })
                                 </div>
                             </div>
                         </div>
@@ -79,7 +84,7 @@
                             <div class="col-sm-9">
                                 <div class="with-icon">
                                     @Html.EditorFor(model => model.Surname, new { htmlAttributes = new { @class = "form-control  ih-medium ip-gray radius-xs b-light", id = "inputEmailIcon", placeholder = "Soyadı" } })
-                                    @Html.ValidationMessageFor(model => model.Surname, "", new { @class = "text-danger" })
+                                    @Html.ValidationMessageFor(model => model.Surname, "", new { @style = "color:red; text-size:8;" })
                                 </div>
                             </div>
                         </div>
@@ -92,8 +97,9 @@
                             </div>
                             <div class="col-sm-9">
                                 <div class="with-icon">
-                                    @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control  ih-medium ip-gray radius-xs b-light", id = "email", placeholder = "example@kou.edu.tr" } })
-                                    @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
+                                    <input class="form-control  ih-medium ip-gray radius-xs b-light" name="Email" , id="email" , placeholder="example@kou.edu.tr" />
+                                    @*@Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control  ih-medium ip-gray radius-xs b-light", id = "email", placeholder = "example@kou.edu.tr" } })
+                                    @Html.ValidationMessageFor(model => model.Email, "", new { @style = "color:red; text-size:8;" })*@
                                 </div>
                             </div>
                         </div>
@@ -106,7 +112,6 @@
                             <div class="col-sm-9">
                                 <div class="with-icon">
                                     @Html.EditorFor(model => model.Faculty, new { htmlAttributes = new { @class = "form-control  ih-medium ip-gray radius-xs b-light", id = "inputEmailIcon", placeholder = "Fakültesi" } })
-                                    @Html.ValidationMessageFor(model => model.Faculty, "", new { @class = "text-danger" })
                                 </div>
                             </div>
                         </div>
@@ -119,7 +124,6 @@
                             <div class="col-sm-9">
                                 <div class="with-icon">
                                     @Html.EditorFor(model => model.Department, new { htmlAttributes = new { @class = "form-control  ih-medium ip-gray radius-xs b-light", id = "inputEmailIcon", placeholder = "Bölümü" } })
-                                    @Html.ValidationMessageFor(model => model.Department, "", new { @class = "text-danger" })
                                 </div>
                             </div>
                         </div>
@@ -132,7 +136,6 @@
                             <div class="col-sm-9">
                                 <div class="with-icon">
                                     @Html.EditorFor(model => model.Class, new { htmlAttributes = new { @class = "form-control  ih-medium ip-gray radius-xs b-light", id = "inputEmailIcon", placeholder = "Sınıfı" } })
-                                    @Html.ValidationMessageFor(model => model.Class, "", new { @class = "text-danger" })
                                 </div>
                             </div>
                         </div>
@@ -145,7 +148,6 @@
                             <div class="col-sm-9">
                                 <div class="with-icon">
                                     @Html.TextBoxFor(model => model.PhoneNumber, new { @type = "text", @Name = "PhoneNumber", @id = "phoneNumber", @class = "form-control  ih-medium ip-gray radius-xs b-light", placeholder = "Tel No" })
-                                    @Html.ValidationMessageFor(model => model.PhoneNumber, "", new { @class = "text-danger" })
                                 </div>
                             </div>
                         </div>
@@ -158,7 +160,6 @@
                             <div class="col-sm-9">
                                 <div class="with-icon">
                                     @Html.EditorFor(model => model.Adress, new { htmlAttributes = new { @class = "form-control  ih-medium ip-gray radius-xs b-light", id = "inputEmailIcon", placeholder = "Adresi" } })
-                                    @Html.ValidationMessageFor(model => model.Adress, "", new { @class = "text-danger" })
                                 </div>
                             </div>
                         </div>
@@ -169,7 +170,6 @@
                             <div class="col-sm-9">
                                 <div class="with-icon">
                                     @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control  ih-medium ip-gray radius-xs b-light", id = "inputPasswordIcon", placeholder = "Parola" } })
-                                    @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
                                 </div>
                             </div>
                         </div>
@@ -177,16 +177,16 @@
                             <div class="col-sm-9">
                                 <div class="with-icon">
                                     @Html.EditorFor(model => model.InternCaseId, new { htmlAttributes = new { @style = "display:none", @class = "form-control  ih-medium ip-gray radius-xs b-light", @Value = 5 } })
-                                    @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
                                 </div>
                             </div>
                         </div>
                         <div class="layout-button mt-25">
-                            <input type="submit" value="Ekle" class="btn btn-primary btn-default btn-squared px-30" style="width:100%" />
+                            <input type="submit" value="Ekle" class="btn btn-success btn-default btn-squared px-30" style="width:100%" />
                         </div>
                     </form>
                 </div>
             </div>
         </div>
     </div>
-</form>
+
+}
