--- a/YazGelProje/Views/Admin/StudentList.cshtml
+++ b/YazGelProje/Views/Admin/StudentList.cshtml
@@ -3,7 +3,7 @@
     Layout = "~/Views/Shared/AdminSideBar.cshtml";
 }
 
-<a href="@Url.Action("StudentAdd","Admin")" class="btn px-15 btn-primary">
+<a href="@Url.Action("StudentAdd","Admin")" class="btn px-15 btn-success">
     <i class="las la-plus fs-16"></i>Yeni Öğrenci Ekle
 </a>
 
