--- a/YazGelProje/Views/Login/SuperAdminLogin.cshtml
+++ b/YazGelProje/Views/Login/SuperAdminLogin.cshtml
@@ -87,7 +87,7 @@
                                                             <a href="forget-password.html">Şifremi Unuttum</a>
                                                         </div>
                                                         <div class="button-group d-flex pt-1 justify-content-md-start justify-content-center">
-                                                            <button class="btn btn-primary btn-default btn-squared mr-15 text-capitalize lh-normal px-50 py-15 signIn-createBtn" style="width:100%">
+                                                            <button class="btn btn-success btn-default btn-squared mr-15 text-capitalize lh-normal px-50 py-15 signIn-createBtn" style="width:100%">
                                                                 Giriş Yap
                                                             </button>
                                                             <center>
