--- a/YazGelProje/Views/Shared/TeacherSideBar.cshtml
+++ b/YazGelProje/Views/Shared/TeacherSideBar.cshtml
@@ -110,6 +110,11 @@
                                                 <span data-feather="user"></span> Profil
                                             </a>
                                         </li>
+                                        <li>
+                                            <a href="@Url.Action("ConfirmPassword","Teacher")">
+                                                <span data-feather="key"></span> Parolayı Değiştir
+                                            </a>
+                                        </li>
                                     </ul>
                                     <a href="@Url.Action("TeacherLogout","Login")" class="nav-author__signout">
                                         <span data-feather="log-out"></span> Çıkış Yap
@@ -145,6 +150,12 @@
                 <div class="sidebar__menu-group">
                     <ul class="sidebar_nav">
                         <li>
+                            <a href="/Teacher/Home" class="">
+                                <span data-feather="help-circle" class="nav-icon"></span>
+                                <span class="menu-text">Öğrenci Başvuru Durumu</span>
+                            </a>
+                        </li>
+                        <li>
                             <a href="/Teacher/InternStartFiles" class="">
                                 <span data-feather="file-plus" class="nav-icon"></span>
                                 <span class="menu-text">Başvuru Evrakları</span>
@@ -152,6 +163,12 @@
                         </li>
                         <li>
                             <a href="/Teacher/InternBookFiles" class="">
+                                <span data-feather="file-plus" class="nav-icon"></span>
+                                <span class="menu-text">Staj Defter Evrakları</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="/Teacher/InternForms" class="">
                                 <span data-feather="file-plus" class="nav-icon"></span>
                                 <span class="menu-text">Staj Defter Evrakları</span>
                             </a>
