--- a/YazGelProje/Views/Student/FormUpload.cshtml
+++ b/YazGelProje/Views/Student/FormUpload.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿
+@{
     ViewBag.Title = "DosyaYukle";
 }
 
@@ -9,7 +10,7 @@
     string number = User.Identity.Name;
     int studentId = context.Students.Where(x => x.StudentNumber == number).Select(x => x.StudentId).FirstOrDefault();
     var toApply = context.Students.Where(x => x.StudentNumber == number).Select(x => x.InternCaseId).FirstOrDefault();
-    YazGelProje.Models.InternFile internFiles = context.InternFiles.Where(x => x.StudentId == studentId).FirstOrDefault();
+    YazGelProje.Models.InternForm internFiles = context.InternForms.Where(x => x.StudentId == studentId).FirstOrDefault();
 }
 <head>
     <link rel="stylesheet" href="~/assets/vendor_assets/css/bootstrap/bootstrap.css">
@@ -45,7 +46,7 @@
             };
 
             $.ajax({
-                url: '/Student/FileRemove',
+                url: '/Student/FormRemove',
                 type: "POST",
                 data: model,
                 success: function (result) {
@@ -120,7 +121,7 @@
             <div class="navbar-left">
                 <a href="" class="sidebar-toggle">
                     <img class="svg" src="~/img/svg/bars.svg" alt="img">
-                </a> 
+                </a>
                 <a class="navbar-brand" href="/Student/Home"><img class="dark" src="~/Content/Resimler/kou.png" alt="svg" style="width:50px; height:50px;"></a>
             </div>
             @{
@@ -254,7 +255,7 @@
                             <div class="card-body">
                                 @if (User.Identity.IsAuthenticated == true)
                                 {
-                                    <form action="/Student/FileUpload" method="post" name="myDropzone" id="myDropzone" enctype="multipart/form-data">
+                                    <form action="/Student/FormUpload" method="post" name="myDropzone" id="myDropzone" enctype="multipart/form-data">
                                         <br />
                                         <div>
                                             <div id="previews" class="dz-default dz-message box__input dropzone" style="background-color: aliceblue">
@@ -299,7 +300,7 @@
 
                                 @if (User.Identity.IsAuthenticated == true)
                                 {
-                                    var list = context.InternFiles.Where(x => x.StudentId == studentId).OrderByDescending(x => x.FileDate).Take(5);
+                                    var list = context.InternForms.Where(x => x.StudentId == studentId).OrderByDescending(x => x.FileDate).Take(5);
 
                                     <table class="table table-striped">
                                         <thead>
@@ -316,8 +317,8 @@
                                             @foreach (var item in list)
                                             {
                                                 <tr>
-                                                    <td><a href="@Url.Action("FileShow", "Student", new { dosya = @item.FileName })" target="_blank">@item.FileName</a></td>
-                                                    <td><a href="@Url.Action("Download", "Student", new { file = @item.FileName })"><button type="submit" class="btn btn-success btn-default btn-squared px-30">İndir</button></a></td>
+                                                    <td><a href="@Url.Action("FormShow", "Student", new { dosya = @item.FileName })" target="_blank">@item.FileName</a></td>
+                                                    <td><a href="@Url.Action("FormDownload", "Student", new { file = @item.FileName })"><button type="submit" class="btn btn-success btn-default btn-squared px-30">İndir</button></a></td>
                                                     <td><a onclick="BasvuruBelgesiSil(@item.FileId)"><button type="submit" class="btn btn-danger">Sil</button></a></td>
 
                                                     <td>@item.FileDate</td>
