--- a/YazGelProje/Views/SuperAdmin/AdminEdit.cshtml
+++ b/YazGelProje/Views/SuperAdmin/AdminEdit.cshtml
@@ -53,7 +53,7 @@
                                     @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
                                 </div>
                                 <div class="layout-button mt-25">
-                                    <input type="submit" value="Güncelle" class="btn btn-primary btn-default btn-squared px-30" />
+                                    <input type="submit" value="Güncelle" class="btn btn-success btn-default btn-squared px-30"  style="width:100%" />
                                 </div>
                             </div>
                         </div>
