--- a/YazGelProje/Views/SuperAdmin/Home.cshtml
+++ b/YazGelProje/Views/SuperAdmin/Home.cshtml
@@ -13,10 +13,10 @@
     </select>
     <br />
     <br />
-    <h1 style="font-weight: bold; text-align: center; background-color: #5F63F2; color: white ">@ViewBag.Mesaj</h1>
+    <h1 style="font-weight: bold; text-align: center; background-color: #20C997; color: white ">@ViewBag.Mesaj</h1>
     <br />
     <br />
-    <a><button type='submit' class='btn btn-primary btn-default btn-squared btn-lg btn-block'>Onayla</button></a>
+    <a><button type='submit' class='btn btn-success btn-default btn-squared btn-lg btn-block'>Onayla</button></a>
     <br />
 </form>
 <script src="~/assets/vendor_assets/js/jquery/jquery-3.5.1.min.js"></script>
