--- a/YazGelProje/Views/SuperAdmin/SetAuthority.cshtml
+++ b/YazGelProje/Views/SuperAdmin/SetAuthority.cshtml
@@ -9,7 +9,7 @@
 
     <h3 style="font-weight: bold; font-style: italic ;text-align:center ;color:green">@ViewBag.Mesaj1</h3>
 
-    <div style="border: 2px solid #000; padding: 8px; -moz-border-radius: 10px; -webkit-border-radius: 10px; border-radius: 10px; width:100%; margin-left:0px">
+    <div style="border: 2px solid #20C997; padding: 8px; -moz-border-radius: 10px; -webkit-border-radius: 10px; border-radius: 10px; width:100%; margin-left:0px">
 
         @if (Model != null)
         {
@@ -36,7 +36,7 @@
             </div>
         }
         <br /><br />
-        <button type="submit" class="btn px-15 btn-primary" style="margin-left:515px">Onayla</button>
+        <button type="submit" class="btn px-15 btn-success"  style="width:100%" >Onayla</button>
     </div>
 </form>
 
