--- a/YazGelProje/Views/Teacher/InternForms.cshtml
+++ b/YazGelProje/Views/Teacher/InternForms.cshtml
@@ -1,8 +1,10 @@
-﻿@model YazGelProje.Controllers.AdminController.studentModel
+﻿@model YazGelProje.Controllers.TeacherController.studentModel
 
 @{
-    Layout = "~/Views/Shared/AdminSideBar.cshtml";
+    ViewBag.Title = "BasvuruDosyalari";
+    Layout = "~/Views/Shared/TeacherSideBar.cshtml";
 }
+
 
 <script>
     const { options } = require("dropzone");
@@ -15,7 +17,7 @@
                 "id": id
             };
             $.ajax({
-                url: '/Admin/StajBasvuruBelgesiSil',
+                url: '/admin/StajBasvuruBelgesiSil',
                 type: "POST",
                 data: model,
                 success: function (result) {
@@ -26,7 +28,7 @@
         }
     }
 
-    function InternBookFileTake() {
+    function InternStartFileTake() {
         var userID = $('#StudentId').val();
 
         var model = {
@@ -34,7 +36,7 @@
         };
 
         $.ajax({
-            url: '/Admin/InternBookFileTake',
+            url: '/Teacher/InternFormTake',
             type: "POST",
             data: model,
             success: function (result) {
@@ -45,9 +47,9 @@
                 for (i = 0; i < result.length; ++i) {
 
                     tableResult += "<tr>";
-                    tableResult += "<td style = ''><a href='/InternFiles/Staj/" + result[i].PageName + "' InternBookFileShow>" + result[i].PageName + "</a></td>";
-                    tableResult += "<td style = ''><a href='/InternFiles/Staj/" + result[i].PageName + "' Download><button type='button' class='btn btn-success'>İndir</button></a></td>";
-                    tableResult += "<td style = ''>" + ToJavaScriptDate(result[i].Date) + "</td>";
+                    tableResult += "<td style = ''><a href='/InternFiles/Staj/" + result[i].FileName + "' FileShow>" + result[i].FileName + "</a></td>";
+                    tableResult += "<td style = ''><a href='/InternFiles/Staj/" + result[i].FileName + "' Download><button type='button' class='btn btn-success'>İndir</button></a></td>";
+                    tableResult += "<td style = ''>" + ToJavaScriptDate(result[i].FileDate) + "</td>";
 
                     tableResult += "</tr>";
                 }
@@ -77,7 +79,7 @@
             $('#c').empty();
             $.ajax({
                 type: 'POST',
-                url: '/Admin/InternStartCase',
+                url: '/Teacher/InternStartCase',
                 dataType: 'json',
                 data: { id: $('#StudentId').val() },
                 success: function (basvuru) {
@@ -96,12 +98,12 @@
 
 </script>
 
-<form action="/Admin/InternBookFiles" method="post">
+<form action="/Teacher/InternForms" method="post">
 
     <div class="col-lg-12">
         <div class="card card-default card-md mb-12">
             <div class="card-header  py-20">
-                <h2 style="text-align:center;font-style:italic;font-weight:bold">Staj Defteri Dosyalari</h2>
+                <h2 style="text-align:center;font-style:italic;font-weight:bold">Staj Başvuru Dosyalari</h2>
             </div>
             <div class="card-body">
                 <div class="select-size">
@@ -112,7 +114,7 @@
                             <div class="tab-pane fade show active" id="large" role="tabpanel" aria-labelledby="size-large">
                                 <div class="select-size-content__single">
                                     <h3>ÖĞRENCİ BİLGİSİ SEÇİNİZ</h3>
-                                    <select class="form-control  form-control-lg" onchange="InternBookFileTake()" name="StudentId" id="StudentId">
+                                    <select class="form-control  form-control-lg" onchange="InternStartFileTake()" name="StudentId" id="StudentId">
                                         <option>Öğrenci Ad Soyad</option>
                                         @foreach (var item in Model.students)
                                         {
@@ -147,6 +149,3 @@
     </div>
 </form>
 
-
-
-<script src="~/assets/vendor_assets/js/jquery/jquery-3.5.1.min.js"></script>
