--- a/YazGelProje/Views/Teacher/InternStartFiles.cshtml
+++ b/YazGelProje/Views/Teacher/InternStartFiles.cshtml
@@ -48,7 +48,7 @@
 
                     tableResult += "<tr>";
                     tableResult += "<td style = ''><a href='/InternFiles/Staj/" + result[i].FileName + "' FileShow>" + result[i].FileName + "</a></td>";
-                    tableResult += "<td style = ''><a href='/InternFiles/Staj/" + result[i].FileName + "' Download><button type='button' class='btn btn-info'>İndir</button></a></td>";
+                    tableResult += "<td style = ''><a href='/InternFiles/Staj/" + result[i].FileName + "' Download><button type='button' class='btn btn-success'>İndir</button></a></td>";
                     tableResult += "<td style = ''>" + ToJavaScriptDate(result[i].FileDate) + "</td>";
 
                     tableResult += "</tr>";
@@ -138,7 +138,7 @@
                                         }
                                     </select>
                                     <hr />
-                                    <button id="delete" type='submit' class="btn px-15 btn-primary" style="width:100%">Onayla</button>
+                                    <button id="delete" type='submit' class="btn px-15 btn-success" style="width:100%">Onayla</button>
                                 </div>
                             </div>
                         </div>
